Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- #1116, was incorrect name of called method in SubscriptionTool
- #1125, fixed Unauthorized when subscribing as member.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-